# AgostaAmodeoAnzalone

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  Singularity.def  build_and_run.sh  build_apptainer.sh  clean_and_run.sh  clean_outputs.sh  gmon.out  job.sh  profile_gprof.sh
.github/prompts/: Issue_evaluator.prompt  issue-evaluator.prompt.yml
.github/workflows/: AI_code_review.yaml  AI_issue_assist.yaml  CI_testing.yaml  build-apptainer.yml  ci.yaml  deploy.yaml
IMPLEMENTATION_HISTORY/: ANALYSIS RESULT 1.md  BATCH ACCUMULATOR IMPLEMENTATION 4.md  BATCH ACCUMULATOR PLAN 3.md  MAIN CORRECTION 2.md
docs/: EXECUTION_GUIDE.md  TESTING_IMPROVEMENTS.md
input/telemetry/: export_sat_alpha_small.csv  export_sat_alpha_small_fixed.csv  fix.sh
output_perf_test/batches/: batch_001_20260606_090653.txt  batch_002_20260606_090653.txt  batch_003_20260606_090653.txt  batch_004_20260606_090653.txt  batch_005_20260606_090653.txt  batch_006_20260606_090653.txt  batch_007_20260606_090653.txt  batch_008_20260606_090653.txt  batch_009_20260606_090653.txt  batch_010_20260606_090653.txt  batch_011_20260606_090653.txt  batch_012_20260606_090653.txt  batch_013_20260606_090654.txt  batch_014_20260606_090654.txt  batch_015_20260606_090654.txt  batch_016_20260606_090654.txt  batch_017_20260606_090654.txt  batch_018_20260606_090654.txt  batch_019_20260606_090654.txt
output_profile/: profile_analysis.txt  valid_data.csv
output_test/batches/: batch_001_20260606_090631.txt  batch_002_20260606_090631.txt  batch_003_20260606_090631.txt  batch_004_20260606_090631.txt  batch_005_20260606_090631.txt  batch_006_20260606_090631.txt  batch_007_20260606_090631.txt  batch_008_20260606_090631.txt  batch_009_20260606_090631.txt  batch_010_20260606_090631.txt
src/: batch_accumulator.hpp  csv_parser.hpp  main.cpp  output_formatter.hpp  rules_engine.hpp  timestamp_processor.hpp  types.hpp  yaml_parser.hpp
test/: run_e2e_fixture.cmake  test_component_integration.cpp  test_concurrency_integration.cpp  test_csv_parser.cpp  test_helpers.hpp  test_integration_component.cpp  test_integration_concurrency.cpp  test_pipeline.cpp  test_processing.cpp  test_rules_engine.cpp  test_types.cpp
test/fixtures/faults/: telemetry_faults.csv
test/fixtures/integration/: expected_valid_data.csv  rules.json  sensors.yaml  telemetry.csv
